# Yandex_Form_StudLab

./: Makefile  README  README.md  alembic.ini  dependecy.py  docker-compose.yml  exception.py  gunicorn.conf.py  main.py  pyproject.toml  settings.py
Postman_collection/: StudLabYaForm.postman_collection.json
alembic/: env.py
alembic/versions/: 1b077690ffe0_fix.py  232c39ca89e7_fix_db.py  27857a7591fb_fix_unicode.py  4834cb361e66_add.py  48ec3613abcd_fix_unicode_third_try.py  725e6d32fe89_fix_unicode_second_try.py  996ac0dfc6d6_add_form_answers_user.py  9f645e36d9a2_fix_form_schema.py  a8a205840d7d_fix_access_token.py  b7355fb5f4d4_add_into_db.py  c0fb67cdc895_fix_create_schema.py  c460e368fdda_fix.py  c6c22dc27e51_add_form_answers_user.py  caec9ec9814e_initial_migration.py  dd86c57da840_fix_db_user_autoincrement_true.py  e68dd3fc62a0_fix_db.py  ecc2ef65d4f6_fix_db_user.py  ff934e539110_access_token_taken_out.py
app/: dependecy.py  main.py  settings.py
app/database/: __init__.py  accessor.py
app/form/: handlers.py  models.py  repository.py  service.py
app/form/schema/: JSON.py  __init__.py  form.py
app/user/auth/: handlers.py  schema.py  service.py
app/user/user_profile/: handlers.py  models.py  repository.py  schema.py  service.py
database/: __init__.py  accessor.py
handlers/: __init__.py  auth.py  form.py  user.py
models/: Answers.py  Form.py  __init__.py  user.py  userprofile.py
repository/: Form.py  __init__.py  user.py
schema/: JsonResponse.py  __init__.py  form.py  user.py
service/: __init__.py  auth.py  form.py  user.py
